#55 Adjust the example program (#64)